WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 114468
color-index media feature not supported
https://bugs.webkit.org/show_bug.cgi?id=114468
Summary
color-index media feature not supported
Rune Lillesveen
Reported
2013-04-11 15:24:22 PDT
Created
attachment 197681
[details]
Testcase detecting color-index support The color-index media feature from CSS Media Queries[1] is not supported or recognized. [1]
http://www.w3.org/TR/css3-mediaqueries/
Attachments
Testcase detecting color-index support
(119 bytes, text/html)
2013-04-11 15:24 PDT
,
Rune Lillesveen
no flags
Details
Patch
(10.23 KB, patch)
2013-04-11 15:36 PDT
,
Rune Lillesveen
no flags
Details
Formatted Diff
Diff
Patch
(10.26 KB, patch)
2013-04-12 01:39 PDT
,
Rune Lillesveen
no flags
Details
Formatted Diff
Diff
Patch
(10.26 KB, patch)
2013-04-15 03:48 PDT
,
Rune Lillesveen
no flags
Details
Formatted Diff
Diff
Patch
(10.23 KB, patch)
2013-04-15 04:00 PDT
,
Rune Lillesveen
no flags
Details
Formatted Diff
Diff
Patch
(10.25 KB, patch)
2013-04-15 04:18 PDT
,
Rune Lillesveen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Rune Lillesveen
Comment 1
2013-04-11 15:36:36 PDT
Created
attachment 197682
[details]
Patch
WebKit Commit Bot
Comment 2
2013-04-11 15:37:25 PDT
Attachment 197682
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast/media/mq-color-index-01-expected.html', u'LayoutTests/fast/media/mq-color-index-01.html', u'LayoutTests/fast/media/mq-color-index-02-expected.txt', u'LayoutTests/fast/media/mq-color-index-02.html', u'Source/WebCore/ChangeLog', u'Source/WebCore/css/MediaFeatureNames.h', u'Source/WebCore/css/MediaQueryEvaluator.cpp', u'Source/WebCore/css/MediaQueryExp.cpp']" exit_code: 1 Source/WebCore/css/MediaQueryEvaluator.cpp:219: color_indexMediaFeatureEval is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Source/WebCore/css/MediaQueryEvaluator.cpp:434: min_color_indexMediaFeatureEval is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Source/WebCore/css/MediaQueryEvaluator.cpp:439: max_color_indexMediaFeatureEval is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 3 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 3
2013-04-11 16:44:02 PDT
Comment on
attachment 197682
[details]
Patch
Attachment 197682
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/103033
Build Bot
Comment 4
2013-04-11 17:18:32 PDT
Comment on
attachment 197682
[details]
Patch
Attachment 197682
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/106028
Rune Lillesveen
Comment 5
2013-04-12 01:39:40 PDT
Created
attachment 197730
[details]
Patch
WebKit Commit Bot
Comment 6
2013-04-12 01:42:23 PDT
Attachment 197730
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast/media/mq-color-index-01-expected.html', u'LayoutTests/fast/media/mq-color-index-01.html', u'LayoutTests/fast/media/mq-color-index-02-expected.txt', u'LayoutTests/fast/media/mq-color-index-02.html', u'Source/WebCore/ChangeLog', u'Source/WebCore/css/MediaFeatureNames.h', u'Source/WebCore/css/MediaQueryEvaluator.cpp', u'Source/WebCore/css/MediaQueryExp.cpp']" exit_code: 1 Source/WebCore/css/MediaQueryEvaluator.cpp:219: color_indexMediaFeatureEval is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Source/WebCore/css/MediaQueryEvaluator.cpp:435: min_color_indexMediaFeatureEval is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Source/WebCore/css/MediaQueryEvaluator.cpp:440: max_color_indexMediaFeatureEval is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 3 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Kenneth Rohde Christiansen
Comment 7
2013-04-12 07:38:10 PDT
Comment on
attachment 197730
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=197730&action=review
> Source/WebCore/css/MediaQueryEvaluator.cpp:246 > + if (value) > + return numberValue(value, number) && compareValue(0, static_cast<int>(number), op); > + > + return false;
I would prefer if (!value) return return number...
Rune Lillesveen
Comment 8
2013-04-15 03:48:13 PDT
Created
attachment 198075
[details]
Patch
WebKit Commit Bot
Comment 9
2013-04-15 03:50:15 PDT
Attachment 198075
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast/media/mq-color-index-01-expected.html', u'LayoutTests/fast/media/mq-color-index-01.html', u'LayoutTests/fast/media/mq-color-index-02-expected.txt', u'LayoutTests/fast/media/mq-color-index-02.html', u'Source/WebCore/ChangeLog', u'Source/WebCore/css/MediaFeatureNames.h', u'Source/WebCore/css/MediaQueryEvaluator.cpp', u'Source/WebCore/css/MediaQueryExp.cpp']" exit_code: 1 Source/WebCore/css/MediaQueryEvaluator.cpp:219: color_indexMediaFeatureEval is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Source/WebCore/css/MediaQueryEvaluator.cpp:435: min_color_indexMediaFeatureEval is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Source/WebCore/css/MediaQueryEvaluator.cpp:440: max_color_indexMediaFeatureEval is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 3 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Kenneth Rohde Christiansen
Comment 10
2013-04-15 03:50:54 PDT
Comment on
attachment 198075
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=198075&action=review
> Source/WebCore/css/MediaQueryEvaluator.cpp:238 > +static bool color_indexMediaFeatureEval(CSSValue* value, RenderStyle*, Frame* frame, MediaFeaturePrefix op) > +{ > + UNUSED_PARAM(frame);
I would just not add frame, ie just Frame*
Rune Lillesveen
Comment 11
2013-04-15 04:00:06 PDT
Created
attachment 198080
[details]
Patch
WebKit Commit Bot
Comment 12
2013-04-15 04:03:31 PDT
Attachment 198080
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast/media/mq-color-index-01-expected.html', u'LayoutTests/fast/media/mq-color-index-01.html', u'LayoutTests/fast/media/mq-color-index-02-expected.txt', u'LayoutTests/fast/media/mq-color-index-02.html', u'Source/WebCore/ChangeLog', u'Source/WebCore/css/MediaFeatureNames.h', u'Source/WebCore/css/MediaQueryEvaluator.cpp', u'Source/WebCore/css/MediaQueryExp.cpp']" exit_code: 1 Source/WebCore/css/MediaQueryEvaluator.cpp:219: color_indexMediaFeatureEval is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Source/WebCore/css/MediaQueryEvaluator.cpp:433: min_color_indexMediaFeatureEval is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Source/WebCore/css/MediaQueryEvaluator.cpp:438: max_color_indexMediaFeatureEval is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 3 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Kenneth Rohde Christiansen
Comment 13
2013-04-15 04:06:18 PDT
When something is reviewed, and there are reviewer comments, feel free to fill in the Reviewed by line and just set cq?
Rune Lillesveen
Comment 14
2013-04-15 04:18:22 PDT
Created
attachment 198082
[details]
Patch
WebKit Commit Bot
Comment 15
2013-04-15 04:21:29 PDT
Attachment 198082
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast/media/mq-color-index-01-expected.html', u'LayoutTests/fast/media/mq-color-index-01.html', u'LayoutTests/fast/media/mq-color-index-02-expected.txt', u'LayoutTests/fast/media/mq-color-index-02.html', u'Source/WebCore/ChangeLog', u'Source/WebCore/css/MediaFeatureNames.h', u'Source/WebCore/css/MediaQueryEvaluator.cpp', u'Source/WebCore/css/MediaQueryExp.cpp']" exit_code: 1 Source/WebCore/css/MediaQueryEvaluator.cpp:219: color_indexMediaFeatureEval is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Source/WebCore/css/MediaQueryEvaluator.cpp:433: min_color_indexMediaFeatureEval is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Source/WebCore/css/MediaQueryEvaluator.cpp:438: max_color_indexMediaFeatureEval is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 3 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Kenneth Rohde Christiansen
Comment 16
2013-04-15 04:22:17 PDT
Comment on
attachment 198082
[details]
Patch then you don't need to set r? Btw there is a script git-add-reviewer HEAD "name" that you might wish to use.
Rune Lillesveen
Comment 17
2013-04-15 04:29:22 PDT
(In reply to
comment #16
)
> (From update of
attachment 198082
[details]
) > then you don't need to set r? Btw there is a script git-add-reviewer HEAD "name" that you might wish to use.
Ah, ok. Thanks!
WebKit Commit Bot
Comment 18
2013-04-15 04:59:57 PDT
The commit-queue encountered the following flaky tests while processing
attachment 198082
[details]
: http/tests/ssl/ping-with-unsafe-redirect.html
bug 114616
(author:
ap@webkit.org
) http/tests/security/mixedContent/redirect-https-to-http-iframe-in-main-frame.html
bug 114208
(authors:
abarth@webkit.org
and
rniwa@webkit.org
) media/track/track-mode.html
bug 114361
(author:
annacc@chromium.org
) fast/loader/javascript-url-in-object.html
bug 114210
(authors:
rniwa@webkit.org
and
sam@webkit.org
) platform/mac/editing/deleting/deletionUI-single-instance.html
bug 114181
(author:
rniwa@webkit.org
) svg/batik/filters/feTile.svg
bug 114375
(authors:
krit@webkit.org
and
zimmermann@kde.org
) transitions/color-transition-rounding.html
bug 114182
(author:
simon.fraser@apple.com
) transitions/cubic-bezier-overflow-svg-length.html
bug 114183
(author:
peter@chromium.org
) transitions/interrupt-zero-duration.html
bug 114184
(authors:
cmarrin@apple.com
,
rniwa@webkit.org
, and
simon.fraser@apple.com
) transitions/multiple-background-transitions.html
bug 114185
(author:
simon.fraser@apple.com
) transitions/cubic-bezier-overflow-color.html
bug 114186
(author:
peter@chromium.org
) transitions/multiple-shadow-transitions.html
bug 114187
(author:
simon.fraser@apple.com
) transitions/mismatched-shadow-transitions.html
bug 114188
(author:
simon.fraser@apple.com
) transitions/color-transition-all.html
bug 114189
(authors:
ossy@webkit.org
and
simon.fraser@apple.com
) transitions/cubic-bezier-overflow-shadow.html
bug 114191
(author:
peter@chromium.org
) transitions/min-max-width-height-transitions.html
bug 114192
(author:
simon.fraser@apple.com
) transitions/cancel-transition.html
bug 114193
(authors:
ojan@chromium.org
,
rniwa@webkit.org
, and
simon.fraser@apple.com
) transitions/border-radius-transition.html
bug 114194
(author:
simon.fraser@apple.com
) transitions/flex-transitions.html
bug 114195
(author:
tony@chromium.org
) transitions/mixed-type.html
bug 114196
(author:
mikelawther@chromium.org
) transitions/multiple-mask-transitions.html
bug 114197
(author:
simon.fraser@apple.com
) transitions/color-transition-premultiplied.html
bug 114198
(author:
simon.fraser@apple.com
) transitions/mismatched-shadow-styles.html
bug 114199
(author:
simon.fraser@apple.com
) transitions/mask-transitions.html
bug 114200
(authors:
ojan@chromium.org
,
oliver@apple.com
, and
simon.fraser@apple.com
) transitions/cubic-bezier-overflow-length.html
bug 114201
(author:
peter@chromium.org
) transitions/multiple-background-size-transitions.html
bug 114202
(authors:
mitz@webkit.org
and
simon.fraser@apple.com
) transitions/clip-transition.html
bug 114203
(authors:
dglazkov@chromium.org
and
simon.fraser@apple.com
) transitions/cubic-bezier-overflow-transform.html
bug 114204
(author:
peter@chromium.org
) transitions/interrupted-accelerated-transition.html
bug 56242
(authors:
rniwa@webkit.org
,
simon.fraser@apple.com
, and
tonyg@chromium.org
) transitions/background-transitions.html
bug 114206
(author:
simon.fraser@apple.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 19
2013-04-15 05:00:58 PDT
Comment on
attachment 198082
[details]
Patch Clearing flags on attachment: 198082 Committed
r148431
: <
http://trac.webkit.org/changeset/148431
>
WebKit Commit Bot
Comment 20
2013-04-15 05:01:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug