color-index media feature not supported https://bugs.webkit.org/show_bug.cgi?id=114468

Patch by Rune Lillesveen <rune@opera.com> on 2013-04-15
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Support the color-index media feature. Currently assumes that no WebKit
browser will have an output device that uses a color lookup table.

Tests: fast/media/mq-color-index-01.html
       fast/media/mq-color-index-02.html

* css/MediaFeatureNames.h:
(MediaFeatureNames):
* css/MediaQueryEvaluator.cpp:
(WebCore::color_indexMediaFeatureEval):
(WebCore):
(WebCore::min_color_indexMediaFeatureEval):
(WebCore::max_color_indexMediaFeatureEval):
* css/MediaQueryExp.cpp:
(WebCore::featureWithPositiveInteger):
(WebCore::featureWithoutValue):

LayoutTests:

Added testcases for checking support and handling invalid values for
the color-index media feature.

* fast/media/mq-color-index-01-expected.html: Added.
* fast/media/mq-color-index-01.html: Added.
* fast/media/mq-color-index-02-expected.txt: Added.
* fast/media/mq-color-index-02.html: Added.

Canonical link: https://commits.webkit.org/132993@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148431 268f45cc-cd09-0410-ab3c-d52691b4dbfc