Source/WebCore/css/MediaQueryExp.cpp
@@ -88,6 +88,9 @@ static inline bool featureWithPositiveInteger(const AtomicString& mediaFeature, 
     return mediaFeature == MediaFeatureNames::colorMediaFeature
         || mediaFeature == MediaFeatureNames::max_colorMediaFeature
         || mediaFeature == MediaFeatureNames::min_colorMediaFeature
+        || mediaFeature == MediaFeatureNames::color_indexMediaFeature
+        || mediaFeature == MediaFeatureNames::max_color_indexMediaFeature
+        || mediaFeature == MediaFeatureNames::min_color_indexMediaFeature
         || mediaFeature == MediaFeatureNames::min_monochromeMediaFeature
         || mediaFeature == MediaFeatureNames::max_monochromeMediaFeature;
 }
@@ -130,6 +133,7 @@ static inline bool featureWithoutValue(const AtomicString& mediaFeature)
     // Media features that are prefixed by min/max cannot be used without a value.
     return mediaFeature == MediaFeatureNames::monochromeMediaFeature
         || mediaFeature == MediaFeatureNames::colorMediaFeature
+        || mediaFeature == MediaFeatureNames::color_indexMediaFeature
         || mediaFeature == MediaFeatureNames::gridMediaFeature
         || mediaFeature == MediaFeatureNames::heightMediaFeature
         || mediaFeature == MediaFeatureNames::widthMediaFeature
